# snappers

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: capture.rs  cli.rs  clipboard.rs  config.rs  geometry.rs  main.rs  overlay.rs  overlay_renderer.rs  render.rs  save.rs  state.rs  theme.rs
